welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:6: error: not found: value isFacingTrail
  	if (isFacingTrail(c) == true) {
            ^